--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,20 @@ code {
     monospace;
 }
 
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  monospace;
+}
+
 .cb {
   clear:both;
 }
@@ -28,6 +42,7 @@ code {
   padding-top:15px;
   cursor:pointer;
   text-align:center;
+  font-size:20px;
 }
 .cardCover {
   width: 40px;
@@ -69,6 +84,11 @@ code {
   float:left;
   border:0px solid black;
 }
+.msg {
+  color:#000000;
+  font-weight:bold;
+}
+
 .scoreWrong {
   width:20px;
 }
@@ -77,12 +97,9 @@ code {
   width:20px;
   color:green;
 }
-.msg {
-  width:290px;
-  color:#000000;
-  font-weight:bold;
-}
+
 .restartBtn {
+  float:right;
   margin:4px auto;
   width:120px;
   border:2px solid black;
